# cloudflare-speed-cli

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: cli.rs  main.rs  model.rs  network.rs  stats.rs  storage.rs
src/engine/: cloudflare.rs  dns.rs  ip_comparison.rs  latency.rs  mod.rs  network_bind.rs  throughput.rs  traceroute.rs  turn_udp.rs
src/tui/: dashboard.rs  history.rs  mod.rs
