[package]
name = "cloudflare-speed-cli_"
version = "0.1.0"
edition = "2021"
authors = ["kavehtehrani <codemonkey13x@gmail.com>"]
description = "CLI tool for Cloudflare speed testing with TUI interface"
license = "GPL-3.0"
repository = "https://github.com/kavehtehrani/cloudflare-speed-cli"
homepage = "https://github.com/kavehtehrani/cloudflare-speed-cli"
documentation = "https://github.com/kavehtehrani/cloudflare-speed-cli"
keywords = ["cloudflare", "speed-test", "network", "tui", "cli"]
categories = ["network", "command-line-utilities"]

[dependencies]
anyhow = "1.0.95"
bytes = "1.9.0"
clap = { version = "4.5.23", features = ["derive"] }
crossterm = { version = "0.28.1", optional = true, features = ["event-stream"] }
dirs = "5.0.1"
futures = "0.3.31"
hdrhistogram = "7.5.4"
humantime-serde = "1.1.1"
humantime = "2.1.0"
rand = "0.8.5"
ratatui = { version = "0.29.0", optional = true, default-features = false, features = ["crossterm"] }
reqwest = { version = "0.12.9", default-features = false, features = ["rustls-tls", "http2", "gzip", "brotli", "deflate", "json", "stream"] }
arboard = { version = "3.3", optional = true }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
time = { version = "0.3.37", features = ["formatting", "macros", "local-offset"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "signal", "time", "sync", "net"] }

[[bin]]
name = "cloudflare-speed-cli"
path = "src/main.rs"

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm", "dep:arboard"]

[package.metadata.deb]
maintainer = "kavehtehrani <codemonkey13x@gmail.com>"
copyright = "Copyright (c) 2024, kavehtehrani"
extended-description = """\
A CLI tool that displays network speed test results from Cloudflare's speed test service in a TUI interface.

Features:
- Interactive TUI with real-time charts and statistics
- Speed tests (download/upload throughput, idle latency, loaded latency)
- Test history management
- JSON export
- Text and JSON output modes for scripting
"""
depends = "$auto"
section = "net"
priority = "optional"

[package.metadata.rpm]
license = "GPL-3.0"
group = "Applications/Internet"
release = "1"
summary = "CLI tool for Cloudflare speed testing with TUI interface"
description = """\
A CLI tool that displays network speed test results from Cloudflare's speed test service in a TUI interface.

Features:
- Interactive TUI with real-time charts and statistics
- Speed tests (download/upload throughput, idle latency, loaded latency)
- Test history management
- JSON export
- Text and JSON output modes for scripting
"""
